movile horizontal scrolling fixed

--- a/css/main.sass
+++ b/css/main.sass
@@ -128,8 +128,8 @@ body
         line-height: 7rem
         text-transform: uppercase
         text-shadow: 2px 2px 2px grey
+        padding-bottom: 2rem
       p
-        padding-top: 2rem
         font:
           size: 20px
         color: $text
